logs/Slang/generic/class/class_test_31.sv.log
name: class_test_31
description: Test
should_fail: 0
tags: 6.15 8.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_31.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_31.sv:7:15: error: forward typedef 'myclass_fwd' does not resolve to a data type
typedef class myclass_fwd;
              ^
